# event-struct

./: .gitignore  CONTRIBUTORS.md  Confluence.v  EventStructure.v  Ftuple.v  IdentType.v  InhType.v  LICENSE  Prime.v  README.md  RegMachine.v  Styleguide.md  TransitionSystem.v  WfType.v  _CoqProject  coq-event-struct.opam  coq-eventstruct.opam  dependency-graph.sh  eventstructure.v  eventstructures.v  ftuple.v  ident.v  identtype.v  inhType.v  inhtype.v  memory_model.v  monad.v  monads.v  monoid.v  pomset.v  prime_eventstruct.v  regmachine.v  relations.v  rewriting_system.v  rfsfun.v  ssrlia.v  transitionsystem.v  utilities.v  wftype.v
.github/workflows/: ci.yml
SYRCoSE/: main.tex
papers/SYRCoSE/: Makefile  background.tex  casestudy.tex  defs.tex  encode_evstr.tex  future.tex  intro.tex  intro_to_PES.tex  main.bib  main.tex  overview.tex  regmachine-eventstruct.tex  regmachine.tex  related.tex  response.txt  sharedmem.tex  small_step.tex  wellfounded.tex
papers/SYRCoSE/fig/: encode_cf.tex  encode_full.tex  encode_part.tex  encode_prog.tex  eventstruct-example.tex  eventstruct-sem.tex  intro-es.tex  intro-prog.tex  intro-traces.tex  regmachine-eventstruct-example.tex  regmachine-eventstruct-prog.tex  regmachine-thrdsem.tex  small_step.tex  thread_sem.tex
theories/common/: countable.v  fperm.v  fsgraph.v  fsrel.v  hal.v  ident.v  ilia.v  inhtype.v  monad.v  monoid.v  order.v  perm.v  rel.v  rel_algebra.v  relalg.v  rewriting_system.v  seq.v  utils.v  wftype.v
theories/concur/: eventstructure.v  lposet.v  lts.v  pomset.v  pomset_lts.v  porf_eventstruct.v  prime_eventstruct.v  prop_pomlang.v  relaxed.v  syncalg.v  transitionsystem.v
theories/lang/: regmachine.v  relaxed.v  sharedmem.v
theory/common/: ident.v  inhtype.v  monoid.v  rel.v  relations.v  rewriting_system.v  ssrnatlia.v  utils.v
theory/concur/: eventstructure.v  pomset.v  prime_eventstruct.v  transitionsystem.v
theory/lang/: regmachine.v
