opam-version: "2.0"
maintainer: "volodeyka@gmail.com"
version: "dev"

homepage: "https://github.com/volodeyka/event-struct"
dev-repo: "git+https://github.com/volodeyka/event-struct.git"
bug-reports: "https://github.com/volodeyka/event-struct/issues"
doc: "https://volodeyka.github.io/event-struct/"
license: "TODO: MIT recommended"

synopsis: "Formalization of event structures in Coq"
description: """
A Coq library of formalized theory of event structures with applications to
concurrency semantics. Includes a theory of prime event structures and
operational small-step semantics for their incremental construction.
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.13~") | (= "dev")}
  "coq-mathcomp-finmap" {(>= "1.5.1")}
  "coq-mathcomp-ssreflect" {(>= "1.11" & < "1.12~") | (= "dev")}
  "coq-equations"
]
conflicts: [
  "coq-equations" {(= "dev+HoTT")}
]

tags: [
  "category:Computer Science/Concurrency"
  "logpath:event_struct"
]
authors: [
  "TODO"
]
