opam-version: "2.0"
maintainer: "Vladimir Gladstein <vovaglad00@gmail.com>"
version: "dev"

homepage: "https://github.com/event-structures/event-struct"
dev-repo: "git+https://github.com/event-structures/event-struct.git"
bug-reports: "https://github.com/event-structures/event-struct/issues"
doc: "https://event-structures.github.io/event-struct/"
license: "MIT"

synopsis: "Formalization of event structures in Coq"
description: """
A Coq library of formalized theory of event structures with applications to
concurrency semantics. Includes a theory of prime event structures and
operational small-step semantics for their incremental construction.
"""

build: [make "-j%{jobs}%" ]
install: [make "install"]
depends: [
  "coq" {(>= "8.10" & < "8.14~") | (= "dev")}
  "coq-mathcomp-finmap" {(>= "1.5.1") | (= "dev")}
  # "coq-mathcomp-ssreflect" {(>= "1.12" & < "1.13~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(= "dev")}
  "coq-mathcomp-zify" {(= "dev")}
  "coq-relation-algebra" {(>= "1.7.4")}
  # "coq-relation-algebra" {(= "dev")}
  "coq-equations"
]
# pin-depends: [
#   [ "coq-relation-algebra.dev" "git+https://github.com/eupp/relation-algebra#monoid-decoupling"]
# ]
conflicts: [
  "coq-equations" {(= "dev+HoTT")}
]
tags: [
  "keyword:concurrency"
  "keyword:event structures"
  "keyword:weak memory models"
  "keyword:operational semantics"
  "category:Computer Science/Concurrency/Weak Memory Models"
  "logpath:eventstruct"
]
authors: [
  "Vladimir Gladstein <vovaglad00@gmail.com>"
  "Dmitrii Mikhailovskii <mikhaylovskiy.dmitriy@gmail.com>"
  "Evgenii Moiseenko <evg.moiseenko94@gmail.com>"
  "Anton Trunov <anton.a.trunov@gmail.com>"
]
